# gamedev_network

./: .gitignore  .gitmodules
w1/: CMakeLists.txt  old_socket_tools.cpp
w1/inc/: Client.hpp  DgramSocket.hpp  Package.hpp  Packet.hpp  Server.hpp  socket_init.hpp
w1/src/client/: Client.cpp  main.cpp
w1/src/network/: DgramSocket.cpp  Package.cpp  Packet.cpp  socket_init.cpp
w1/src/server/: Server.cpp  main.cpp
w2/: CMakeLists.txt  FindENet.cmake  TODO
w2/inc/: Addresses.hpp  Client.hpp  Game.hpp  Host.hpp  Lobby.hpp  LobbyServer.hpp  Packet.hpp  Peer.hpp
w2/inc/Client/: Client.hpp
w2/inc/Host/: BaseEventHandler.hpp  Events.hpp  Host.hpp
w2/inc/Packet/: Packet.hpp  PacketData.hpp
w2/inc/Tools/: AutoArray.hpp  TypeID.hpp  TypeIdTest.cpp  auto_array_test.cpp
w2/src/: Client.cpp  Game.cpp  Host.cpp  Lobby.cpp  Packet.cpp  Pakcet.cpp  client.cpp
w2/src/Client/: Client.cpp  LobbyStartGameServerHandler.cpp
w2/src/demos/connect/: client.cpp  server.cpp
w2/src/lobby_server/: LobbyServer.cpp
w2/src/network/: Peer.cpp
w2/src/network/Host/: BaseEventHandler.cpp  Events.cpp  Host.cpp
w2/src/network/Packet/: Packet.cpp  PacketData.cpp
w2/test/: main.cpp
w2/test/inner/: a.cpp  a.hpp  inner.hpp  main.cpp
w4/: BitStream.hpp  CMakeLists.txt
w4/inc/: Core.hpp  IBitStream.hpp  OBitStream.hpp  Server.hpp  Time.hpp  Vector2.hpp  entity.h  protocol.h
w4/src/: Client.cpp  IBitStream.cpp  OBitStream.cpp  Server.cpp  Time.cpp  protocol.cpp  server.cpp
w4/src/client/: app.cpp
w4/src/network/: BitStream.cpp
w7/inc/: BitStream.hpp  protocol.h  quantisation.h
w7/src/: BitStream.cpp  protocol.cpp
